unpackaged/main/default/objects/Contract_Request_Form__c/Contract_Request_Form__c.object-meta.xml
<CustomObject>
    <label>Contract Request Form</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Request Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Request Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>