unpackaged/main/default/objects/Contract_Request_Form__c/fields/Classes_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Classes_Attempt__c</fullName>
    <inlineHelpText>How many attempts allowed?</inlineHelpText>
    <label>Classes Attempt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>