unpackaged/main/default/objects/Contract_Request_Form__c/fields/ETS_Classes_Attempt_Unlimited__c.field-meta.xml
<CustomField>
    <fullName>ETS_Classes_Attempt_Unlimited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Classes Attempt Unlimited</label>
    <type>Checkbox</type>
</CustomField>