unpackaged/main/default/objects/Contract_Request_Form__c/fields/ETS_Contract_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ETS_Contract_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contract Request Forms</relationshipLabel>
    <relationshipName>Contract_Request_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>