unpackaged/main/default/objects/Contract_Request_Form__c/fields/ETS_Credit_Invoice_Allowed__c.field-meta.xml
<CustomField>
    <fullName>ETS_Credit_Invoice_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Invoice Allowed</label>
    <type>Checkbox</type>
</CustomField>