unpackaged/main/default/objects/Contract_Request_Form__c/fields/ETS_Employee_Count__c.field-meta.xml
<CustomField>
    <fullName>ETS_Employee_Count__c</fullName>
    <label>Employee Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>