unpackaged/main/default/objects/Contract_Request_Form__c/fields/ETS_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ETS_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>End Date</label>
    <type>Date</type>
</CustomField>