unpackaged/main/default/objects/Contract_Request_Form__c/fields/ETS_Is_Transfer__c.field-meta.xml
<CustomField>
    <fullName>ETS_Is_Transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Transfer</label>
    <type>Checkbox</type>
</CustomField>