unpackaged/main/default/objects/Contract_Request_Form__c/fields/ETS_Knowledge_Test_Attempts__c.field-meta.xml
<CustomField>
    <fullName>ETS_Knowledge_Test_Attempts__c</fullName>
    <inlineHelpText>How many attempts allowed?</inlineHelpText>
    <label>Knowledge Test Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>