unpackaged/main/default/objects/Contract_Request_Form__c/fields/ETS_Knowledge_Test_Attempts_Unlimited__c.field-meta.xml
<CustomField>
    <fullName>ETS_Knowledge_Test_Attempts_Unlimited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Knowledge Test Attempts Unlimited</label>
    <type>Checkbox</type>
</CustomField>