unpackaged/main/default/objects/Contract_Request_Form__c/fields/ETS_Lumpsum_Package__c.field-meta.xml
<CustomField>
    <fullName>ETS_Lumpsum_Package__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lumpsum Package</label>
    <type>Checkbox</type>
</CustomField>