unpackaged/main/default/objects/Contract_Request_Form__c/fields/ETS_Pool_Chance_Unlimited__c.field-meta.xml
<CustomField>
    <fullName>ETS_Pool_Chance_Unlimited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pool Chance Unlimited</label>
    <type>Checkbox</type>
</CustomField>