unpackaged/main/default/objects/Contract_Request_Form__c/fields/ETS_Self_Payment__c.field-meta.xml
<CustomField>
    <fullName>ETS_Self_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Self Payment</label>
    <type>Checkbox</type>
</CustomField>