unpackaged/main/default/objects/Contract_Request_Form__c/fields/ETS_SYAT_Attempts__c.field-meta.xml
<CustomField>
    <fullName>ETS_SYAT_Attempts__c</fullName>
    <label>SYAT Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>