unpackaged/main/default/objects/Contract_Request_Form__c/fields/ETS_vehicle__c.field-meta.xml
<CustomField>
    <fullName>ETS_vehicle__c</fullName>
    <label>Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LAV</fullName>
            </value>
            <value>
                <fullName>BLD</fullName>
            </value>
            <value>
                <fullName>HFL</fullName>
            </value>
            <value>
                <fullName>HVB</fullName>
            </value>
            <value>
                <fullName>HVT</fullName>
            </value>
            <value>
                <fullName>LFL</fullName>
            </value>
            <value>
                <fullName>LMV</fullName>
            </value>
            <value>
                <fullName>MOT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>