unpackaged/main/default/objects/Contract_Request_Form__c/fields/Pool_Chances__c.field-meta.xml
<CustomField>
    <fullName>Pool_Chances__c</fullName>
    <label>Pool Chances</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>